<resources>
    <string name="app_name">Guess who</string>
    <string name="options_languagei">中&#160;&#160;文</string>


    <!--主菜单-->
    <string name="mainmenu_play">开始</string>
    <string name="mainmenu_multi_play">多人游戏</string>
    <string name="mainmenu_options">选项</string>
    <string name="mainmenu_score">分数</string>
    <string name="mainmenu_facebook_fan_us">微博</string>
    <string name="mainmenu_exit">退出</string>

    <string name="mainmenu_best_score">最高分：</string>
    <string name="mainmenu_best_player_name">Leon</string>
    <string name="mainmenu_points">排名：1</string>

    <string name="player_name_fill">请输入你的名字</string>
    <string name="player_name_menu">菜单</string>
    <string name="player_name_ok">OK</string>
    <string name="player_name_skip">跳过</string>

    <string name="options_title">选项</string>
    <string name="options_language">语言</string>
    <string name="options_language_english">English</string>
    <string name="options_language_chinese">中&#160;&#160;文</string>
    <string name="options_language_trandition_chinese">조선어</string>
    <string name="options_music">背景音乐</string>
    <string name="options_sound">游戏声音</string>
    <string name="options_on">On&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="options_off">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Off</string>

    <string name="hi_title">Hi %s!</string>
    <string name="hi_tap_to_start">点击开始游戏！</string>
    <string name="hi_sample_question">波波软件荣誉出品！</string>
    <string name="hi_sample_answer">Guess Who</string>
    <string name="hi_help_1">1.可以使用提示三次!</string>
    <string name="hi_help_2">2.滑动箭头按钮回答!</string>
    <string name="hi_help_3">3.可以使用跳过一次!</string>
    <string name="hi_tip_msg">The game is produced by Bobo software.</string>
    <string name="hi_tip_cnt">提示\n0/3</string>
    <string name="just_skip">跳过</string>

    <string name="contact_info">Any questions or feedback, please contact \n henanleon@126.com </string>
    <string name="information_copyright">©2018 BoBo Ltd.</string>
    <string name="information"> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Guess Who is an entertaining,
        educational and fun quiz game. The game has over 1000 questions from 6 categories: Sports, Politics,
        Movies, Music, Business and History. Guess who is the first quiz game with Chinese and international
        content and with 3 language options (English, traditional and simplified Chinese).\n \n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;In the game player has to
        guess who is the person in question as quickly as possible. Player gets randomly
        questions from different categories with three answering alternatives, from which he/she
        chooses the correct one by sliding the arrow. The game is against time, so player who answers
        all the questions correctly and fastest, gets the best score.\n \n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;The game has 3
        different levels. In first level player has to answer 10 questions correctly in order to
        get to the next level. In second level player has to pass 8 questions and in third level 5
        questions. \n \n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;The player can take a tip 3 times within one
        game (max 2 tips per question),
        skip the question once and have one wrong answer within one game.
        If the player chooses the wrong answer second time the game ends. Using tips, skip
        and wrong answer will reduce player’s points from max score. Tips and skips are selected
        by clicking, the answer alternative by sliding the arrow from left to right.\n \n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        Multiplay enables 2-4 different players to compete with one device. Just fill in the names
        of the players and hand the device to your friend after answering your own question.
        There’s no timer in multiplay.\n \n     &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        This game was created by BeiZ Ltd. Please, visit
        our www-site for more information about us.\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;( https://weibo.com/leonbruce ) </string>

    <string name="main_view_unit_min">min</string>
    <string name="main_view_unit_sec">sec</string>
    <string name="main_view_end">结束</string>
    <string name="main_view_you_are_right">Correct!</string>
    <string name="main_view_points_title">Points:</string>

    <string name="persion_type_name_1">Music</string>
    <string name="persion_type_name_2">Sports</string>
    <string name="persion_type_name_3">Movies</string>
    <string name="persion_type_name_4">Politics</string>

    <string name="PassLevelTitle">%s, Well done!</string>
    <string name="PassLevelPrompt1">你通过了第一关，并且正在成名的路上！</string>
    <string name="PassLevelPrompt2">你通过了第二关，并且正在成名的路上！ </string>
    <string name="PassLevelClick">点击屏幕进入下一个关。 </string>
    <!--<string name="gameover">游戏结束，请点击屏幕</string>-->
    <string name="gameover">游戏结束，点击进入排行榜。</string>
    <string name="ranking">国内排行榜</string>
    <string name="nodatayet">还没有挑战哦！</string>
    <string name="aheadover">大佬您答题错误超过2次。</string>
    <!--<string name="hi_tip_count">提示\n%s/3</string>-->
    <string name="followwechat">敬请关注官方微信</string>

</resources>
