<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView android:id="@+id/mainmenu_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:src="@drawable/informationhelp" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <!--主菜单-->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                   >
                    <Button
                        style="@style/main_menu_button"
                        android:id="@+id/main_menu_play"
                        android:text="@string/mainmenu_play"/>
                    <Button
                        style="@style/main_menu_button"
                        android:id="@+id/main_menu_multi_play"
                        android:text="@string/mainmenu_multi_play"/>
                    <Button
                        style="@style/main_menu_button"
                        android:id="@+id/main_menu_options"
                        android:text="@string/mainmenu_options"/>
                    <Button
                        style="@style/main_menu_button"
                        android:id="@+id/main_menu_score"
                        android:text="@string/mainmenu_score"/>
                    <Button
                        style="@style/main_menu_button"
                        android:id="@+id/main_menu_facebook"
                        android:paddingLeft="25dp"
                        android:paddingRight="25dp"
                        android:drawableLeft="@drawable/sinaicon"
                        android:text="@string/mainmenu_facebook_fan_us"/>
                    <Button
                        style="@style/main_menu_button"
                        android:id="@+id/main_menu_multi_exit"
                        android:text="@string/mainmenu_exit"/>

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                   >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/big_star"/>
                </LinearLayout>
            </LinearLayout>
            <!--android:id="@+id/buttom_layout"-->
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             >

            <TextView
                android:id="@+id/high_run"
                style="@style/MainMenuText"
                android:text="@string/mainmenu_best_score"/>
             <TextView
                 android:id="@+id/MainMenu_player_name"
                 style="@style/MainMenuText"
                 android:layout_marginLeft="5dp"
                 android:text="@string/mainmenu_best_player_name"/>
             <!--android:layout_marginVertical="2dp"-->
             <TextView
                 android:id="@+id/MainMenu_payer_score"
                 style="@style/MainMenuText"
                 android:textColor="#ff0000"
                 android:layout_width="40dp"
                 android:layout_marginRight="4dp"
                 android:gravity="right"
                 android:text="100"/>
             <TextView
                 android:id="@+id/mainmenu_points"
                 style="@style/MainMenuText"
                 android:text="@string/mainmenu_points"/>
         </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
