<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
        <TextView
            style="@style/PlayerNameFill"
            android:layout_gravity="center"
            android:text="@string/player_name_fill"/>
        <guess.bobo.cn.guesswho.component.DashLineExitText
            android:id="@+id/player_name"
            android:layout_gravity="center"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold">
        </guess.bobo.cn.guesswho.component.DashLineExitText>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center">
        <Button
            android:id="@+id/player_name_menu"
            style="@style/small_button"
            android:text="@string/player_name_menu"/>
        <Button
            android:id="@+id/player_name_ok"
            style="@style/small_button"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:text="@string/player_name_ok" />
        <Button
            android:id="@+id/player_name_skip"
            style="@style/small_button"
            android:text="@string/player_name_skip"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="30dp"
        android:gravity="bottom|right">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"/>
    </LinearLayout>
</LinearLayout>
