<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">
    <TextView
        android:id="@+id/language_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:text="@string/options_title"/>
    <TableLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:stretchColumns="0"
        android:background="@drawable/options_box_bg">
        <TableRow
            android:layout_weight="1"
            android:layout_marginLeft="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/options_language"
                    android:paddingTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical = "true"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:text="@string/options_language"/>
                <LinearLayout
                    android:paddingTop="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="40dp"
                    android:id="@+id/options_music1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical = "true"
                    android:layout_alignParentRight = "true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/left_arrow_black"/>
                    <TextView
                        android:id="@+id/options_languages"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="17sp"
                        android:textColor="#ffffff"
                        android:background="#ff0000"
                        android:text="@string/options_languagei"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/right_arrow_black"/>
                </LinearLayout>
            </RelativeLayout>
        </TableRow>
        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/options_line"/>
        <TableRow
            android:layout_weight="1"
            android:layout_marginLeft="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
            <TextView
                android:id="@+id/text_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical = "true"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:text="@string/options_music"/>
            <ToggleButton
                android:layout_marginRight="40dp"
                android:id="@+id/options_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_centerVertical = "true"
                android:layout_alignParentRight = "true"
                android:textAllCaps="false"
                android:textOn="@string/options_on"
                android:textOff="@string/options_off"
                android:background="@drawable/toggle_button">
            </ToggleButton>
            </RelativeLayout>
        </TableRow>
        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/options_line"/>
        <TableRow
            android:layout_weight="1"
            android:layout_marginLeft="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/text_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical = "true"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:text="@string/options_sound"/>
                <ToggleButton
                    android:layout_marginRight="40dp"
                    android:id="@+id/options_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_centerVertical = "true"
                    android:layout_alignParentRight = "true"
                    android:textAllCaps="false"
                    android:textOn="@string/options_on"
                    android:textOff="@string/options_off"
                    android:background="@drawable/toggle_button">
                </ToggleButton>
            </RelativeLayout>
        </TableRow>

    </TableLayout>
    <Button
        android:id="@+id/options_mainmenu"
        android:layout_width ="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/small_button"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/player_name_menu"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="30dp"
        android:src="@drawable/logo"/>

</LinearLayout>
